--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -12,6 +12,10 @@ body {
   color: #d4d4d4;
 }
 
+h2, h3, h4, h5, h6, strong {
+  font-weight: bold;
+}
+
 button {
   padding: 0.5em 1em;
   border-style: none;
@@ -92,7 +96,8 @@ section#main {
 }
 
 section#main button#start,
-section#main button.next {
+section#main button.next,
+section#main button#postScore {
   margin-top: 1em;
   margin-right: 0.5em;
   margin-bottom: 0.5em;
@@ -100,8 +105,19 @@ section#main button.next {
   color: #222;
 }
 
+section#main button#postScore {
+  padding: 0.5em 1em;
+  border-style: none;
+  border-radius: 0.5em;
+  background: #e37830;
+  color: #222;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 div#answerContainer {
   margin-top: 1em;
+  margin-bottom: 0.5em;
 }
 
 div#question button.answerBtn {
@@ -143,4 +159,20 @@ div#question button.incorrect {
   -webkit-box-shadow: 0px 0px 10px 3px rgba(169, 92, 104, 0.8);
   -moz-box-shadow: 0px 0px 10px 3px rgba(169, 92, 104, 0.8);
   box-shadow: 0px 0px 10px 3px rgba(169, 92, 104, 0.8);
+}
+
+/* TIMER  */
+
+div#timerBar {
+  margin-bottom: 0.5em;
+  /* border: 2px solid tomato; */
+}
+
+div#timerBar div#timer {
+  height: 2.5em;
+  width: 100%;
+  background: #4141cb;
+  background-image: repeating-linear-gradient( -45deg, #4141cb, #4141cb 1em, #5555d0 1em, #5555d0 2em
+  );
+  transition: linear 1s;
 }
